<resources>
    <string name="app_name">Hahiye</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forget password</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="interest">Interest</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="create_account">Create account</string>
    <string name="agree_to_terms_and_conditions_privacy_policy">Agree to terms and conditions, privacy policy</string>
    <string name="next">Next</string>
    <string name="select_at_least_5_interest_to_continue">Select at least 5 interest to continue</string>
</resources>
