<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.transax.hahiye.viewmodel.LoginViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@color/white_color"
            app:cardCornerRadius="@dimen/double_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/double_margin">

                <ImageView
                    android:layout_width="@dimen/login_icon"
                    android:layout_height="@dimen/login_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/double_margin"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/ic_hahiye" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_size"
                    android:layout_marginBottom="@dimen/double_margin"
                    android:background="@drawable/edit_text"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/big_margin"
                    app:addTextChangedListener="@{viewModel.getEmailFromView}" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_size"
                    android:layout_marginBottom="?android:attr/actionBarSize"
                    android:background="@drawable/edit_text"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/big_margin"
                    app:addTextChangedListener="@{viewModel.getPasswordFromView}" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/imageButton"
            style="?attr/borderlessButtonStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:onClick="@{viewModel::performLogin}"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:srcCompat="@drawable/ic_ok" />

        <Button
            android:id="@+id/button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_margin"
            android:background="@color/colorAccent"
            android:text="@string/sign_up"
            android:textColor="@color/white_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>