<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="rw.transax.hahiye.ui.activity.SignUpActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/create_account"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_extra"
                    android:textStyle="bold" />

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/corner_button"
                android:background="@color/colorWhite"
                app:cardCornerRadius="@dimen/big_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/double_margin">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/corner_button"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/ic_user_account" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/double_margin"
                        android:text="@string/create_account"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/horizontal_margin"
                        android:background="@drawable/bg_edit_text"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/edit_text_size"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/big_margin"
                            app:srcCompat="@drawable/ic_people" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:hint="@string/first_name"
                            android:inputType="textEmailAddress"
                            android:padding="@dimen/big_margin"
                            android:textColor="@color/colorPrimaryDark"
                            android:textColorHint="@color/colorView"
                            android:textCursorDrawable="@null" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/horizontal_margin"
                        android:background="@drawable/bg_edit_text"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/edit_text_size"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/big_margin"
                            app:srcCompat="@drawable/ic_people" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:hint="@string/last_name"
                            android:inputType="textEmailAddress"
                            android:padding="@dimen/big_margin"
                            android:textColor="@color/colorPrimaryDark"
                            android:textColorHint="@color/colorView"
                            android:textCursorDrawable="@null" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/horizontal_margin"
                        android:background="@drawable/bg_edit_text"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/edit_text_size"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/big_margin"
                            app:srcCompat="@drawable/ic_email" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:hint="@string/e_mail"
                            android:inputType="textEmailAddress"
                            android:padding="@dimen/big_margin"
                            android:textColor="@color/colorPrimaryDark"
                            android:textColorHint="@color/colorView"
                            android:textCursorDrawable="@null" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:background="@drawable/bg_edit_text"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/edit_text_size"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/big_margin"
                            app:srcCompat="@drawable/ic_password" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edit_text_size"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/user_password"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:gravity="center_vertical"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:padding="@dimen/big_margin"
                                android:textColor="@color/colorPrimaryDark"
                                android:textColorHint="@color/colorView"
                                android:textCursorDrawable="@null" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/corner_button"
                        android:orientation="horizontal">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/app_name"
                            android:enabled="true"
                            android:gravity="center_vertical"
                            android:padding="@dimen/small_margin" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/big_margin"
                            android:text="@string/agree_to_terms_and_conditions_privacy_policy"
                            android:textColor="@color/colorPrimaryDark" />
                    </LinearLayout>

                    <android.support.design.button.MaterialButton
                        android:id="@+id/btn_sign_up"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_size"
                        android:text="@string/sign_up"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size_extra"
                        app:backgroundTint="@color/colorWhite"
                        app:cornerRadius="@dimen/small_margin"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView2"
                        app:rippleColor="@color/colorAccent"
                        app:strokeColor="@color/colorAccent"
                        app:strokeWidth="@dimen/stroke_width" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>